InternexDev_Sandbox/src/objects/Statutory_Forms__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Statutory Forms</relationshipLabel>
        <relationshipName>Statutory_Forms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form_Collectible_Amount__c</fullName>
        <label>Form Collectible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form_Comments__c</fullName>
        <label>Form Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Days_Past_Due__c</fullName>
        <formula>Today() -  Form_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Days Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Due_Date__c</fullName>
        <formula>IF( MONTH( Transaction__r.akritiv__Create_Date__c) &lt;= 3,DATE(YEAR( Transaction__r.akritiv__Create_Date__c),6,30 ), 
IF(AND(MONTH( Transaction__r.akritiv__Create_Date__c) &gt; 3, MONTH( Transaction__r.akritiv__Create_Date__c) &lt;= 6),DATE(YEAR( Transaction__r.akritiv__Create_Date__c),9,30 ), 
IF(AND(MONTH( Transaction__r.akritiv__Create_Date__c) &gt; 6, MONTH( Transaction__r.akritiv__Create_Date__c) &lt;= 9),DATE(YEAR( Transaction__r.akritiv__Create_Date__c),12,31 ), 
IF(AND(MONTH( Transaction__r.akritiv__Create_Date__c) &gt;9, MONTH( Transaction__r.akritiv__Create_Date__c) &lt;= 12),DATE((YEAR( Transaction__r.akritiv__Create_Date__c)+1),3,31),null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Receipt_Date__c</fullName>
        <label>Form Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Required__c</fullName>
        <label>Form Required</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statutory_Form_Required__c</fullName>
        <formula>IF( ISPICKVAL( Form_Required__c , &apos;YES&apos;), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statutory Form Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <description>Transaction to which the Form is related to.</description>
        <label>Transaction</label>
        <referenceTo>akritiv__Transaction__c</referenceTo>
        <relationshipLabel>Statutory Forms</relationshipLabel>
        <relationshipName>Statutory_Forms1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Statutory Form</label>
    <nameField>
        <label>Statutory Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statutory Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>